fix github pages not showing other paths
make colors less jaring

start adding an faq page

changed colors some more

implement faq page

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,8 +1,8 @@
 :root {
     --primary-color: #00FF2B;
-    --secondary-color: #009B55;
-    --border-color: #80998D;
-    --section-color: #272F2D;
+    --secondary-color: #6affbf;
+    --border-color: #00753c;
+    --section-color: #1d1f1d;
     --background-color: #131615;
     --text-color: #FFFFFF;
 }
