--- a/src/views/Links.scss
+++ b/src/views/Links.scss
@@ -35,7 +35,7 @@ main.links {
                     transition: color 0.2s ease-in-out;
                     
                     &:hover {
-                        color: var(--primary-color);
+                        color: var(--secondary-color);
                     }
                 }
             }
